src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__body_must_be_block.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/body_must_be_block.lox
---
Syntax error(s):
[ line 3 ] : Expect 'LeftBrace'.
