src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__empty_body.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/empty_body.lox
---
nil
