src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__extra_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/extra_arguments.lox
---
Runtime error: [ line 6 ] : Expected 2 arguments but got 4.
