src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__local_mutual_recursion.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/local_mutual_recursion.lox
---
Runtime error: [ line 4 ] : Undefined variable 'isOdd'.
