src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__local_recursion.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/local_recursion.lox
---
21
