src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__missing_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/missing_arguments.lox
---
Runtime error: [ line 3 ] : Expected 2 arguments but got 1.
