src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__missing_comma_in_parameters.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/missing_comma_in_parameters.lox
---
Syntax error(s):
[ line 3 ] : Expect 'RightParen'.
