src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__mutual_recursion.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/mutual_recursion.lox
---
true
true
