src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__nested_call_with_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/nested_call_with_arguments.lox
---
hello world
