src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__parameters.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/parameters.lox
---
0
1
3
6
10
15
21
28
36
