src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__print.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/print.lox
---
<fn "foo">
<native fn clock>
