src/interpreter/snapshots/rlox__interpreter__tests__interpreter@function__recursion.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/function/recursion.lox
---
21
